# rlox

./: .gitignore  Cargo.toml  README.md  a.out  bad.lox  license  main.c  main.py  run.py  test.lox  tmp.lox
src/: bad.lox  e2e_tests.rs  environment.rs  func.rs  interpreter.rs  main.rs  parser.rs  resolver.rs  scanner.rs  source_ref.rs  tests.rs
src/parser/: class.rs  func.rs  mod.rs  parsing.rs  tests.rs  types.rs
src/runtime/: class.rs  env_allocator.rs  environment.rs  fast_env.rs  func.rs  instance.rs  interpreter.rs  mod.rs  value.rs
tests/: out10.txt  out15.txt  out16.txt  out18.txt  out19.txt  out20.txt  out21.txt  out3.txt  out5.txt  out6.txt  out8.txt  test1.lox  test10.lox  test11.lox  test13.lox  test14.lox  test15.lox  test16.lox  test17.lox  test18.lox  test19.lox  test2.lox  test20.lox  test21.lox  test3.lox  test4.lox  test5.lox  test6.lox  test7.lox  test8.lox  test9.lox
